force-app/main/default/objects/Location/fields/Contract_Manager__c.field-meta.xml
<CustomField>
    <fullName>Contract_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Manager</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only a user with the contract manager profile can be selected.</errorMessage>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Contract Manager (custom)</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Vans</relationshipName>
    <type>Lookup</type>
</CustomField>