force-app/main/default/objects/Location/fields/Current_User_is_CM__c.field-meta.xml
<CustomField>
    <fullName>Current_User_is_CM__c</fullName>
    <description>Technical field to use in List view filtering</description>
    <formula>Contract_Manager__r.Id =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User is CM</label>
    <type>Checkbox</type>
</CustomField>