force-app/main/default/objects/Location/fields/Van_Crew__c.field-meta.xml
<CustomField>
    <fullName>Van_Crew__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Van Crew</label>
    <referenceTo>ServiceCrew</referenceTo>
    <relationshipLabel>Van</relationshipLabel>
    <relationshipName>Van</relationshipName>
    <type>Lookup</type>
</CustomField>